@@ -1,3 +1,9 @@
+2003-10-04  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b127
+
+	* Re-instated everything up through -b125, except for the skins code.
+
+	* Bumped the Config. Wizard version down by 1 until merge.
+
 2003-10-04  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b126
 
 	* Reverted to -b122. The -b123 merge was partially botched. :(:(
